tests/snapshots/integration__integration_tests__post_start_commands__post_start_separate_logs.snap
---
source: tests/integration_tests/post_start_commands.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - feature
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpEDC1KG/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mStarting (background):[0m
[40m [0m echo 'TASK1_OUTPUT'

🔄 [36mStarting (background):[0m
[40m [0m echo 'TASK2_OUTPUT'

🔄 [36mStarting (background):[0m
[40m [0m echo 'TASK3_OUTPUT'

✅ [32mCreated new worktree for [1m[32mfeature[0m at [REPO].feature[0m

To enable automatic cd, run: wt configure-shell

----- stderr -----
